@startuml Screens

class Front {
    -Screen* currentDisplay
    +Front(Screen* display)
    +void Draw()
    +void setScreen(Screen& screen)
    +std::string getInput()
    +Plotter& getPlotter()
}

abstract Screen {
    + virtual void Draw(int x, int y, int w, int h) const
}

class InfoScreen {
    -Expression& exp
    +InfoScreen(Expression& exp)
    +void Draw(int x, int y, int w, int h) const
}

class PlotterScreen {
    - Expression& exp
    - double xOffset
    - double yOffset
    - double xWidth
    - double yWidth

    + PlotterScreen(Expression& exp)
    + void Move(double x, double y)
    + void Offset(double dx, double dy)
    + void Scale(double xw, double yw)
    + void Draw(int x, int y, int w, int h) const
}

Screen <|-- InfoScreen
Screen <|-- PlotterScreen
Front *-- Screen
@enduml